make header layout

--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
 </head>
 <body>
     <header>
-        <div class="background">
-            <div class="background--image"></div>
-            <div class="background--info"></div>
+        <div class="header--about">
+            <div class="header--about--photo"></div>
+            <div class="header--about--text">
+                <h1>About me</h1>
+                <p class="header--about--text--p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ipsam! Facilis obcaecati non deserunt animi cumque voluptas iure quasi vero?</p>
+                <nav>
+                    <a href="https://github.com/nickstrlnkv">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github icon" class="portfolio-icon">
+                    </a>
+                    <a href="https://www.linkedin.com/in/nstrelnikov/">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" alt="Linkedin icon" class="portfolio-icon">
+                    </a>
+                    <a href="https://www.linkedin.com/in/nstrelnikov/">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" alt="Twitter icon" class="portfolio-icon">
+                    </a>
+                </nav>
+            </div>
         </div>
     </header>
-    <main class="works">
-        <div class="works-work"></div>
-        <div class="works-work"></div>
-        <div class="works-work"></div>
-        <div class="works-work"></div>
-        <div class="works-work"></div>
-        <div class="works-work"></div>
+    <main>
+        
     </main>
-    <footer>
-        <div class="footer--info"></div>
-        <div class="footer--img"></div>
-    </footer>
 </body>
 </html>
