--- a/index.html
+++ b/index.html
@@ -27,7 +27,144 @@
         </div>
     </header>
     <main>
-        
+        <h1 class="main-h1">My work</h1>
+        <div class="main-works">
+            <div class="works">
+                <div class="work">
+                    <img class="work-img" src="./images/battleship.jpeg" alt="">
+                    <div class="work--info">
+                        <div class="work--info-first-row">
+                            <p class="work-name">Project name</p>
+                            <div class="work-links">
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github icon" class="portfolio-icon">
+                                </a>
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="./images/link.svg" alt="project link" class="portfolio-icon">
+                                </a>
+                            </div>
+                        </div>
+                        <p class="work-desc">Short description of the project. Just a couple sentences will do</p>
+                    </div>
+                </div>
+                <div class="work">
+                    <img class="work-img" src="./images/battleship.jpeg" alt="">
+                    <div class="work--info">
+                        <div class="work--info-first-row">
+                            <p class="work-name">Project name</p>
+                            <div class="work-links">
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github icon" class="portfolio-icon">
+                                </a>
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="./images/link.svg" alt="project link" class="portfolio-icon">
+                                </a>
+                            </div>
+                        </div>
+                        <p class="work-desc">Short description of the project. Just a couple sentences will do</p>
+                    </div>
+                </div>
+                <div class="work">
+                    <img class="work-img" src="./images/battleship.jpeg" alt="">
+                    <div class="work--info">
+                        <div class="work--info-first-row">
+                            <p class="work-name">Project name</p>
+                            <div class="work-links">
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github icon" class="portfolio-icon">
+                                </a>
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="./images/link.svg" alt="project link" class="portfolio-icon">
+                                </a>
+                            </div>
+                        </div>
+                        <p class="work-desc">Short description of the project. Just a couple sentences will do</p>
+                    </div>
+                </div>
+                <div class="work">
+                    <img class="work-img" src="./images/battleship.jpeg" alt="">
+                    <div class="work--info">
+                        <div class="work--info-first-row">
+                            <p class="work-name">Project name</p>
+                            <div class="work-links">
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github icon" class="portfolio-icon">
+                                </a>
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="./images/link.svg" alt="project link" class="portfolio-icon">
+                                </a>
+                            </div>
+                        </div>
+                        <p class="work-desc">Short description of the project. Just a couple sentences will do</p>
+                    </div>
+                </div>
+                <div class="work">
+                    <img class="work-img" src="./images/battleship.jpeg" alt="">
+                    <div class="work--info">
+                        <div class="work--info-first-row">
+                            <p class="work-name">Project name</p>
+                            <div class="work-links">
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github icon" class="portfolio-icon">
+                                </a>
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="./images/link.svg" alt="project link" class="portfolio-icon">
+                                </a>
+                            </div>
+                        </div>
+                        <p class="work-desc">Short description of the project. Just a couple sentences will do</p>
+                    </div>
+                </div>
+                <div class="work">
+                    <img class="work-img" src="./images/battleship.jpeg" alt="">
+                    <div class="work--info">
+                        <div class="work--info-first-row">
+                            <p class="work-name">Project name</p>
+                            <div class="work-links">
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github icon" class="portfolio-icon">
+                                </a>
+                                <a href="https://github.com/nickstrlnkv">
+                                    <img src="./images/link.svg" alt="project link" class="portfolio-icon">
+                                </a>
+                            </div>
+                        </div>
+                        <p class="work-desc">Short description of the project. Just a couple sentences will do</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="footer-info">
+            <h1>Contact me</h1>
+            <p>Please get in touch if you think our <br>work could be mutually beneficial!</p>
+            <p>1234 Random Road<br>Random Town, California 12345</p>
+            <div class="footer-contacts">
+                <img class="portfolio-icon" src="./images/phone.svg" alt="phone icon">
+                <p>555-555-5555</p>
+            </div>
+            <div class="footer-contacts">
+                <img class='portfolio-icon' src="./images/email.svg" alt="email">
+                <p>ashleywilliams.is.not.real@gmail.com</p>
+            </div>
+            <div class="footer-icon-links">
+                <nav>
+                    <a href="https://github.com/nickstrlnkv">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github icon" class="portfolio-icon">
+                    </a>
+                    <a href="https://www.linkedin.com/in/nstrelnikov/">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" alt="Linkedin icon" class="portfolio-icon">`
+                    </a>
+                    <a href="https://www.linkedin.com/in/nstrelnikov/">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" alt="Twitter icon" class="portfolio-icon">
+                    </a>
+                </nav>
+            </div>
+        </div>
+        <div class="footer-photo">
+            <img class="photo-footer" src="./images/man.jpg" alt="">
+        </div>
+    </footer>
 </body>
 </html>
